--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "hennge-frontend-test",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.11.11",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "next": "13.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  }
+	"name": "hennge-frontend-test",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "tsc --project ./tsconfig.json && eslint --fix \"**/*.+(js|ts|tsx)\"",
+		"format": "prettier --write \"**/*.(js|jsx|ts|tsx|scss|css)\"",
+		"prepare": "husky install",
+		"staged": "lint-staged",
+		"generate:env": "npx gen-env-types .env.local -o env.d.ts -e . "
+	},
+	"dependencies": {
+		"next": "13.0.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "^18.11.12",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"eslint": "^8.29.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-next": "^13.0.6",
+		"eslint-import-resolver-typescript": "^3.5.2",
+		"husky": "^8.0.2",
+		"lint-staged": "^13.1.0",
+		"prettier": "^2.8.1",
+		"typescript": "4.9.4"
+	}
 }
