--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
 		"format": "prettier --write \"**/*.(js|jsx|ts|tsx|scss|css)\"",
 		"prepare": "husky install",
 		"staged": "lint-staged",
-		"generate:env": "npx gen-env-types .env.local -o env.d.ts -e . "
+		"generate:env": "npx gen-env-types .env.local -o env.d.ts -e . ",
+		"generate:api": "node ./codegen.js"
 	},
 	"dependencies": {
+		"axios": "^1.2.1",
+		"dotenv": "^16.0.3",
 		"next": "13.0.6",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-query": "^3.39.2",
+		"swagger-axios-codegen": "^0.15.5"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.12",
