--- a/.eslintrc
+++ b/.eslintrc
@@ -14,13 +14,15 @@
 	"ignorePatterns": ["node_modules/*", ".next/*", ".out/*", "!.prettierrc", "services/*"],
 	"extends": ["airbnb", "next/core-web-vitals"],
 	"rules": {
-		"no-unused-vars": [2, { "argsIgnorePattern": "^_" }],
 		"function-paren-newline": 0,
 		"implicit-arrow-linebreak": 0,
 		"indent": 0,
+		"no-confusing-arrow": 0,
 		"no-control-regex": 0,
 		"no-nested-ternary": 0,
 		"no-tabs": 0,
+		"no-unused-vars": [2, { "argsIgnorePattern": "^_" }],
+		"no-use-before-define": 0,
 		"object-curly-newline": 0,
 		"operator-linebreak": 0,
 		"prefer-arrow-callback": 0,
@@ -28,7 +30,9 @@
 		"import/extensions": 0,
 		"import/no-unresolved": 0,
 		"import/prefer-default-export": 0,
+		"jsx-a11y/label-has-associated-control": 0,
 		"react/function-component-definition": 0,
+		"react/jsx-curly-newline": 0,
 		"react/jsx-filename-extension": 0,
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
