--- a/package.json
+++ b/package.json
@@ -14,25 +14,31 @@
 		"generate:api": "node ./codegen.js"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^4.19.1",
+		"@tanstack/react-query-devtools": "^4.19.1",
 		"axios": "^1.2.1",
+		"dayjs": "^1.11.7",
+		"dayzed": "^3.2.3",
 		"dotenv": "^16.0.3",
 		"next": "13.0.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-query": "^3.39.2",
 		"swagger-axios-codegen": "^0.15.5"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.12",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
+		"autoprefixer": "^10.4.13",
 		"eslint": "^8.29.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-next": "^13.0.6",
 		"eslint-import-resolver-typescript": "^3.5.2",
 		"husky": "^8.0.2",
 		"lint-staged": "^13.1.0",
+		"postcss": "^8.4.19",
 		"prettier": "^2.8.1",
+		"tailwindcss": "^3.2.4",
 		"typescript": "4.9.4"
 	}
 }
