--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 		"baseUrl": ".",
 		"paths": {
 			"@components": ["./components"],
+			"@icons": ["./icons"],
 			"@modules": ["./modules"],
 			"@services": ["./services"],
 			"@utils": ["./utils"]
